@@ -58,3 +58,5 @@ whiteout = 0
 size = 0
 petstandby_on = 0
 petstandby_off = 0
+petmotion = 0
+petmotion_loop = 0
